# 7-simul-helper-python

./: .gitignore  Cargo.toml  README.md  flaskServer.py
src/: lib.rs
static/: style.css
static/js/: get_memo.js
templates/: base.html  index.html
